# browser_agent

./: .gitignore  README.md  config.example.json  plain.md  run.sh
_skills/reviewer-nature/: SKILL.md
_skills/test_demo/: SKILL.md
backend/: README.md  pyproject.toml
backend/browser_agent/: action_executor.py  audit_logging.py  browser_manager.py  database.py  db_models.py  llm_client.py  llm_config.py  main.py  page_context_builder.py  preview_publisher.py  run_coordinator.py  session_analysis.py  session_fanout.py  session_store.py  skills_store.py  tools_spec.py  viewport_presets.py
backend/browser_agent/actions/: __init__.py  base.py  browser.py  control.py  pdf.py  registry.py
backend/scripts/: print_ax_snapshot.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
