[project]
name = "browser-agent"
version = "0.1.0"
description = "Headless browser preview backend (Playwright + WebSocket)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.49.0",
    "loguru>=0.7.0",
    "openai>=1.55.0",
]

[project.scripts]
browser-agent = "browser_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser_agent"]
